--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Project Name</title>
     <link rel="stylesheet" href="src/css/fonts.css" />
     <link rel="stylesheet" href="src/css/reset.css" />
+    <link rel="stylesheet" href="src/css/frid.css" />
     <link rel="stylesheet" href="src/css/style.css" />
   </head>
 
@@ -18,7 +19,7 @@
     <header id="header" class="main_header">
       <div class="headerWrap">
         <div class="top_header">
-          <div class="container">
+          <div class="header_container">
           <nav class="header_nav">
             <ul class="nav_list">
               <li class="nav__item"><a href="index.html">VÅRE ENHETER</a></li>
@@ -52,13 +53,13 @@
               <div class="medium_boxes">
                 <div class="medium__boxes-left">
                   <div class="medium__content">
-                    <div class="arrow_right"><i class="fas fa-long-arrow-alt-right"></i></div><h3>Se vare ledige enheter her!</h3>
+                    <a href="about.html" ><div class="arrow_right"><img src="src/images/right1.svg" alt=""></div><h3>Se vare ledige enheter her!</h3></a>
                   <p>En tekst her som sier noe om emem.no sine leiligheter og garasjer. Litt om hva slags str og typer og hvor i Oslo.</p>
                   </div>
                 </div>
                 <div class="medium__boxes-right">
                   <div class="medium__content">
-                  <h3>Trenger du hjelp?</h3>
+                    <a href="about.html" ><div class="arrow_right"><img src="src/images/right1.svg" alt=""></div><h3>Trenger du hjelp?</h3></a>
                   <p>En tekst som sier noe om hva slags håndverkere man kan kontakte, eller om det er noe galt man trenger hjelp med.</p>
                   </div>
                 </div>
@@ -76,7 +77,7 @@
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
                      sed do eiusmod tempor incididunt ut ero labore et dolore magna aliqua.
                       Ut enim ad minim veniam, quis nostrud exercitation ullamco poriti laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <span>Meld din interest her</span>
+                      <a href="about.html" ><img src="src/images/right2.svg" alt=""><span>Meld din interest her</span></a>
                 </div>
                 <div class="box__thumb" >
                   <img src="src/images/box_img1.png">
@@ -92,7 +93,7 @@
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
                      sed do eiusmod tempor incididunt ut ero labore et dolore magna aliqua.
                       Ut enim ad minim veniam, quis nostrud exercitation ullamco poriti laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <span>Meld din interest her</span>
+                      <a href="about.html" ><img src="src/images/right2.svg" alt=""><span>Meld din interest her</span></a>
                 </div>
               </div>
 
@@ -102,7 +103,7 @@
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
                      sed do eiusmod tempor incididunt ut ero labore et dolore magna aliqua.
                       Ut enim ad minim veniam, quis nostrud exercitation ullamco poriti laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <span>Les mer</span>
+                      <a href="about.html" ><img src="src/images/right2.svg" alt=""><span>Les mer</span></a>
                 </div>
                 <div class="box__thumb" >
                   <img src="src/images/box_img3.png">
@@ -118,16 +119,68 @@
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
                      sed do eiusmod tempor incididunt ut ero labore et dolore magna aliqua.
                       Ut enim ad minim veniam, quis nostrud exercitation ullamco poriti laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <span>Les mer</span>
+                  <a href="about.html" ><img src="src/images/right2.svg" alt=""><span>Les mer</span></a>
                 </div>
               </div>
               
             </div>
           </div>
         </section>
-  
+        <section class="block_section info_section">
+          <div class="container">
+            <div class="info_wrapper">
+              <div class="info_tittle"><h2>Oss i emem as</h2></div>
+              <div class="boxes_info">
+              <div class="info">
+                <div class="info__thumb">
+                  <img src="src/images/info.png" alt="">
+                </div>
+                <div class="info__content">
+                  <h3>Name</h3>
+                  <span>Co-founder & CTO</span>
+                  <ul class="info_item">
+                    <li class="info_list"><img src="src/images/telephone.svg" ><a href="#">+47 918 88 207</a></li>
+                    <li class="info_list"><img src="src/images/email.svg" ><a href="https://mail.google.com/">hans-martin@emem.no</a></li>
+                    <li class="info_list"><img src="src/images/facebook.svg" ><a href="https://www.facebook.com/">facebook.com/name</a></li>
+                  </ul>
+                </div>
+              </div>
 
+              <div class="info">
+                <div class="info__thumb">
+                  <img src="src/images/info.png" alt="">
+                </div>
+                <div class="info__content">
+                  <h3>Name</h3>
+                  <span>Co-founder & CTO</span>
+                  <ul class="info_item">
+                    <li class="info_list"><img src="src/images/telephone.svg" ><a href="#">+47 918 88 207</a></li>
+                    <li class="info_list"><img src="src/images/email.svg" ><a href="https://mail.google.com/">hans-martin@emem.no</a></li>
+                    <li class="info_list"><img src="src/images/facebook.svg" ><a href="https://www.facebook.com/">facebook.com/name</a></li>
+                  </ul>
+                </div>
+              </div>
+
+              <div class="info">
+                <div class="info__thumb">
+                  <img src="src/images/info.png" alt="">
+                </div>
+                <div class="info__content">
+                  <h3>Name</h3>
+                  <span>Co-founder & CTO</span>
+                  <ul class="info_item">
+                    <li class="info_list"><img src="src/images/telephone.svg" ><a href="#">+47 918 88 207</a></li>
+                    <li class="info_list"><img src="src/images/email.svg" ><a href="https://mail.google.com/">hans-martin@emem.no</a></li>
+                    <li class="info_list"><img src="src/images/facebook.svg" ><a href="https://www.facebook.com/">  facebook.com/name</a></li>
+                  </ul>
+                </div>
+              </div>
+              </div>
+
+            </div>
+          </div>
         </section>
+  
         
       </div>
     </main>
@@ -135,7 +188,7 @@
     <!-- BEGIN FOOTER -->
     <footer id="footer" class="main_footer">
       <div class="footerWrap">
-        <div class="container">
+        <div class="footer_container">
           <div class="footer_content">
            <div class="footer__logo">
             <a href="index.html"><img src="src/images/logo.svg" alt="logo"></a>
