--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Project Name</title>
     <link rel="stylesheet" href="src/css/fonts.css" />
     <link rel="stylesheet" href="src/css/reset.css" />
-    <link rel="stylesheet" href="src/css/frid.css" />
+    <link rel="stylesheet" href="src/css/grid.css" />
     <link rel="stylesheet" href="src/css/style.css" />
   </head>
 
@@ -24,7 +24,7 @@
             <ul class="nav_list">
               <li class="nav__item"><a href="index.html">VÅRE ENHETER</a></li>
               <li class="nav__item"><a href="about.html" >LEDIGE ENHETER</a></li>
-              <li class="nav__item"><a href="kontakt.html">KONTAKT</a></li>
+              <li class="nav__item"><a href="contact.html">KONTAKT</a></li>
               <div class="logo">
                 <a href="index.html"><img src="src/images/logo.svg" alt="logo"></a>
                </div>
