Added content image and style

--- a/project_setup_web/page-3.html
+++ b/project_setup_web/page-3.html
@@ -25,7 +25,11 @@
         <div class="container">
             <h3 class="container__title">Våre ledige leiligheter på finn.no akkurat nå.</h3>
             <p class="container__description">En tekst som sier noe om alle leilighetene og garasjene dere har i Oslo. Og <br> at man kan enten se på kartet, eller på listen nedenfor.</p>
-          </div>
+            <div class="container__content">
+              <div class="container__content img">
+                <img src="src/images/Image 1.jpg" alt="Image">
+              </div>
+            </div>
       </div>
     </main>
     <!-- END MAIN -->
