Added boxes and style

--- a/project_setup_web/page-3.html
+++ b/project_setup_web/page-3.html
@@ -23,13 +23,117 @@
     <main id="main" class="main_content">
       <div class="mainWrap">
         <div class="container">
-            <h3 class="container__title">Våre ledige leiligheter på finn.no akkurat nå.</h3>
-            <p class="container__description">En tekst som sier noe om alle leilighetene og garasjene dere har i Oslo. Og <br> at man kan enten se på kartet, eller på listen nedenfor.</p>
-            <div class="container__content">
-              <div class="container__content img">
-                <img src="src/images/Image 1.jpg" alt="Image">
+          <h3 class="container__title">
+            Våre ledige leiligheter på finn.no akkurat nå.
+          </h3>
+          <p class="container__description">
+            En tekst som sier noe om alle leilighetene og garasjene dere har i
+            Oslo. Og <br />
+            at man kan enten se på kartet, eller på listen nedenfor.
+          </p>
+          <div class="container__content">
+            <div class="container__content img">
+              <img src="src/images/Image 1.svg" alt="Image" />
+            </div>
+          </div>
+          <hr />
+          <section class="block_section info_section">
+            <div class="section_container">
+              <div class="info_wrapper">
+                <div class="info_title"><h2>Oss i emem as</h2></div>
+                <div class="boxes_info">
+                  <div class="info">
+                    <div class="info__thumb">
+                      <img src="src/images/info.png" alt="" />
+                    </div>
+                    <div class="info__content">
+                      <h3>Name</h3>
+                      <span>Co-founder & CTO</span>
+                      <ul class="info_item">
+                        <li class="info_list">
+                          <img src="src/images/telephone.svg" /><a href="#"
+                            >+47 918 88 207</a
+                          >
+                        </li>
+                        <li class="info_list">
+                          <img src="src/images/email.svg" /><a
+                            href="https://mail.google.com/"
+                            >hans-martin@emem.no</a
+                          >
+                        </li>
+                        <li class="info_list">
+                          <img src="src/images/facebook.svg" /><a
+                            href="https://www.facebook.com/"
+                            >facebook.com/name</a
+                          >
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+
+                  <div class="info">
+                    <div class="info__thumb">
+                      <img src="src/images/info.png" alt="" />
+                    </div>
+                    <div class="info__content">
+                      <h3>Name</h3>
+                      <span>Co-founder & CTO</span>
+                      <ul class="info_item">
+                        <li class="info_list">
+                          <img src="src/images/telephone.svg" /><a href="#"
+                            >+47 918 88 207</a
+                          >
+                        </li>
+                        <li class="info_list">
+                          <img src="src/images/email.svg" /><a
+                            href="https://mail.google.com/"
+                            >hans-martin@emem.no</a
+                          >
+                        </li>
+                        <li class="info_list">
+                          <img src="src/images/facebook.svg" /><a
+                            href="https://www.facebook.com/"
+                            >facebook.com/name</a
+                          >
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+
+                  <div class="info">
+                    <div class="info__thumb">
+                      <img src="src/images/info.png" alt="" />
+                    </div>
+                    <div class="info__content">
+                      <h3>Name</h3>
+                      <span>Co-founder & CTO</span>
+                      <ul class="info_item">
+                        <li class="info_list">
+                          <img src="src/images/telephone.svg" /><a href="#"
+                            >+47 918 88 207</a
+                          >
+                        </li>
+                        <li class="info_list">
+                          <img src="src/images/email.svg" /><a
+                            href="https://mail.google.com/"
+                            >hans-martin@emem.no</a
+                          >
+                        </li>
+                        <li class="info_list">
+                          <img src="src/images/facebook.svg" /><a
+                            href="https://www.facebook.com/"
+                          >
+                            facebook.com/name</a
+                          >
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
+          </section>
+        </div>
       </div>
     </main>
     <!-- END MAIN -->
