Added Header/Footer sections and style

--- a/project_setup_web/page-3.html
+++ b/project_setup_web/page-3.html
@@ -16,7 +16,29 @@
   <body>
     <!-- BEGIN HEADER -->
     <header id="header" class="main_header">
-      <div class="headerWrap"></div>
+      <div class="headerWrap">
+        <div class="top_header">
+          <div class="header_container">
+            <nav class="header_nav">
+              <ul class="nav_list">
+                <li class="nav__item"><a href="index.html">VÅRE ENHETER</a></li>
+                <li class="nav__item">
+                  <a href="about.html">LEDIGE ENHETER</a>
+                </li>
+                <li class="nav__item"><a href="kontakt.html">KONTAKT</a></li>
+                <div class="logo">
+                  <a href="index.html"
+                    ><img src="src/images/logo.svg" alt="logo"
+                  /></a>
+                </div>
+              </ul>
+              <ul class="nav_list">
+                <li class="nav__item"><a href="english.html">IN ENGLISH</a></li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </div>
     </header>
     <!-- END HEADER -->
     <!-- BEGIN MAIN -->
@@ -139,7 +161,19 @@
     <!-- END MAIN -->
     <!-- BEGIN FOOTER -->
     <footer id="footer" class="main_footer">
-      <div class="footerWrap"></div>
+      <div class="footerWrap">
+        <div class="footer_container">
+          <div class="footer_content">
+            <div class="footer__logo">
+              <a href="index.html"
+                ><img src="src/images/logo.svg" alt="logo"
+              /></a>
+            </div>
+            <h5>Emem AS - post@emem.no</h5>
+            <h5>© 2019 Emem AS. All rights reserved.</h5>
+          </div>
+        </div>
+      </div>
     </footer>
     <!-- END FOOTER -->
     <!-- SCRIPTS -->
